--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <p>Mob No :<a target="_blank" href="tel:+918530907937"> 8530907937</a></p>
 
    </footer>
-   <a href="index.html"><p>About Us</p></a>
+   <a href="about.html"><p>About Us</p></a>
    <a href="#">Back to page</a>
    <p>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia possimus id nihil aspernatur eius, voluptatem 
